--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div>
           <button class="clear" onclick="clearr()">CE</button>
-          <button onclick="displayer(`%`)">%</button>
+          <button>%</button>
           <button class="dell" onclick="deletee()">DEL</button>
           <button onclick="displayer(`/`)">÷</button>
 
@@ -34,7 +34,7 @@
           <button onclick="displayer(`3`)">3</button>
           <button onclick="displayer(`+`)">+</button>
 
-          <button onclick="displayer(`±`)">±</button>
+          <button >±</button>
           <button onclick="displayer(`0`)">0</button>
           <button onclick="displayer(`.`)">.</button>
           <button class="equalto button-eqt">=</button>
