--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <main>
       <div class="calculator-body">
-        <div>
-          <input type="text" class="result-input" />
+        <div class="inp">
+          <input type="text" class="result-input" readonly />
         </div>
 
-        <div>
+        <div class="allBtn">
           <button class="clear" onclick="clearr()">CE</button>
           <button>%</button>
           <button class="dell" onclick="deletee()">DEL</button>
